// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Creator/Steps/If Step Active 1`] = `
.c19 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: currentColor;
}

.c19 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c21 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #6e849a;
}

.c21 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c12 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #f86683;
}

.c12 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c23 .c11 {
  color: #fff;
}

.c24 .c11 {
  color: #6e849a;
}

.c17 {
  display: inline-block;
  padding: 0px 4px 1px 4px;
  color: #62778c;
  font-weight: 600;
  font-size: 14px;
  background-color: #eef4f6a8;
  border-radius: 7px;
  border: 1px solid #dfe5ea;
  cursor: default;
  line-height: 20px;
  text-align: center;
}

.c17.default {
  color: #62778c;
}

.c18 {
  display: inline-block;
  vertical-align: middle;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 22px;
  margin-right: 16px;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c7 .c8:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c25 .c6:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06), 0 0 0 1px #5D9DF5;
}

.c5 .c6:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c5 .c26 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.node--merge-active .c5 {
  z-index: -1;
}

.c13 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

.c14 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c20 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.c20::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #6e849a;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #6e849a;
  border: 4px solid white;
}

.c22 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.c22::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #8da2b5;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #8da2b5;
  border: 4px solid white;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: box-shadow 0.15s ease,opacity 0.15s ease;
  transition: box-shadow 0.15s ease,opacity 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16),0 4px 8px 0 rgba(17,49,96,0.2);
}

.canvas--nodes-active .c0 {
  opacity: 0.7;
}

.canvas--nodes-active .c0:not(.node--merge-active):hover {
  opacity: 1;
}

.c0 .c26 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #62778c;
}

.c3 input:active {
  background: transparent;
}

.c4 > *:not(:last-of-type) {
  margin-bottom: 8px;
}

.c1 {
  position: relative;
}

.c15 .c16 {
  display: inline;
  padding: 0;
  border: none;
  background: none;
  color: #132144;
  line-height: inherit;
  font-size: inherit;
  font-weight: inherit;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          value="If Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          If Block
        </div>
      </div>
    </div>
    <section
      className="c4"
    >
      <div
        className="c5"
        onMouseDown={[Function]}
      >
        <div
          className="c6 c7"
        >
          <div
            className="c8 c9"
          >
            <div
              className="c10"
            >
              <span
                className="c11 c12"
                color="#f86683"
                size={16}
              >
                <svg
                  data-file-name="SvgIf"
                />
              </span>
            </div>
            <span
              className="c13"
            >
              <div
                className="c14"
              >
                <div
                  className="c15 expressionfy"
                >
                   
                  <span
                    className="brackets"
                  >
                    <span
                      className="c16 c17"
                    >
                      {timestamp}
                    </span>
                    <span>
                       
                    </span>
                    <span
                      className="less"
                    >
                      <span
                        className="c18 plus"
                      >
                        <span
                          className="c11 c19"
                          color="currentColor"
                          size={16}
                        >
                          <svg
                            data-file-name="SvgLess"
                          />
                        </span>
                      </span>
                    </span>
                    <span>
                       
                    </span>
                    <span
                      className="math value"
                    >
                      212
                    </span>
                  </span>
                </div>
              </div>
            </span>
            <div
              className="c20"
              onClick={[Function]}
              onMouseDown={[Function]}
            />
          </div>
          <div
            className="c8 c9"
          >
            <div
              className="c10"
            />
            <span
              className="c13"
            >
              <div
                className="c14"
              >
                <div
                  className="c15 expressionfy"
                >
                   
                  <span
                    className="math brackets"
                  >
                    <span
                      className="math value"
                    >
                      4
                    </span>
                     
                    <span
                      className="c18 plus"
                    >
                      <span
                        className="c11 c19"
                        color="currentColor"
                        size={16}
                      >
                        <svg
                          data-file-name="SvgDivide"
                        />
                      </span>
                    </span>
                     
                    <span
                      className="brackets"
                    >
                      <span
                        className="parenthesis"
                      >
                        ( 
                      </span>
                      <span
                        className="math value"
                      >
                        5
                      </span>
                      <span>
                         
                      </span>
                      <span
                        className="or"
                      >
                        <span
                          className="c18 plus"
                        >
                          <span>
                            OR
                          </span>
                        </span>
                      </span>
                      <span>
                         
                      </span>
                      <span
                        className="math brackets"
                      >
                        
                        <span
                          className="c16 c17"
                        >
                          {sessions}
                        </span>
                        .includes('en')
                      </span>
                      <span
                        className="parenthesis"
                      >
                         )
                      </span>
                    </span>
                  </span>
                </div>
              </div>
            </span>
            <div
              className="c20"
              onClick={[Function]}
              onMouseDown={[Function]}
            />
          </div>
          <div
            className="c8 c9"
          >
            <div
              className="c10"
            />
            <span
              className="c13"
            >
              <div
                className="c14"
              >
                <div
                  className="c15 expressionfy"
                >
                   
                  <span
                    className="brackets"
                  >
                    <span
                      className="c16 c17"
                    >
                      {timestamp}
                    </span>
                    <span>
                       
                    </span>
                    <span
                      className="less"
                    >
                      <span
                        className="c18 plus"
                      >
                        <span
                          className="c11 c19"
                          color="currentColor"
                          size={16}
                        >
                          <svg
                            data-file-name="SvgLess"
                          />
                        </span>
                      </span>
                    </span>
                    <span>
                       
                    </span>
                    <span
                      className="math value"
                    >
                      212
                    </span>
                  </span>
                </div>
              </div>
            </span>
            <div
              className="c20"
              onClick={[Function]}
              onMouseDown={[Function]}
            />
          </div>
        </div>
        <div
          className="c6 c7"
        >
          <div
            className="c8 c9"
          >
            <div
              className="c10"
            >
              <span
                className="c11 c21"
                color="#6e849a"
                size={16}
              >
                <svg
                  data-file-name="SvgElse"
                />
              </span>
            </div>
            <span
              className="c13"
            >
              <div
                className="c14"
              >
                Else
              </div>
            </span>
            <div
              className="c22"
              color="#8da2b5"
              onClick={[Function]}
              onMouseDown={[Function]}
            />
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/Steps/If Step Empty 1`] = `
.c15 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #6e849a;
}

.c15 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c12 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #f86683;
}

.c12 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c18 .c11 {
  color: #fff;
}

.c19 .c11 {
  color: #6e849a;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 22px;
  margin-right: 16px;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c7 .c8:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06), 0 0 0 1px rgba(17,49,96,0.08);
}

.c5 .c6:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c5 .c21 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.node--merge-active .c5 {
  z-index: -1;
}

.c20 .c6:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c13 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #8da2b5;
}

.c16 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

.c14 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c17 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.c17::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #8da2b5;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #8da2b5;
  border: 4px solid white;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: box-shadow 0.15s ease,opacity 0.15s ease;
  transition: box-shadow 0.15s ease,opacity 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16),0 4px 8px 0 rgba(17,49,96,0.2);
}

.canvas--nodes-active .c0 {
  opacity: 0.7;
}

.canvas--nodes-active .c0:not(.node--merge-active):hover {
  opacity: 1;
}

.c0 .c21 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #62778c;
}

.c3 input:active {
  background: transparent;
}

.c4 > *:not(:last-of-type) {
  margin-bottom: 8px;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          value="If Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          If Block
        </div>
      </div>
    </div>
    <section
      className="c4"
    >
      <div
        className="c5"
        onMouseDown={[Function]}
      >
        <div
          className="c6 c7"
        >
          <div
            className="c8 c9"
          >
            <div
              className="c10"
            >
              <span
                className="c11 c12"
                color="#f86683"
                size={16}
              >
                <svg
                  data-file-name="SvgIf"
                />
              </span>
            </div>
            <span
              className="c13"
            >
              <div
                className="c14"
              >
                Add IF statement
              </div>
            </span>
          </div>
        </div>
        <div
          className="c6 c7"
        >
          <div
            className="c8 c9"
          >
            <div
              className="c10"
            >
              <span
                className="c11 c15"
                color="#6e849a"
                size={16}
              >
                <svg
                  data-file-name="SvgElse"
                />
              </span>
            </div>
            <span
              className="c16"
            >
              <div
                className="c14"
              >
                Else
              </div>
            </span>
            <div
              className="c17"
              color="#8da2b5"
              onClick={[Function]}
              onMouseDown={[Function]}
            />
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/Steps/If Step Multiple 1`] = `
.c19 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: currentColor;
}

.c19 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c21 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #6e849a;
}

.c21 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c12 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #f86683;
}

.c12 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c23 .c11 {
  color: #fff;
}

.c24 .c11 {
  color: #6e849a;
}

.c17 {
  display: inline-block;
  padding: 0px 4px 1px 4px;
  color: #62778c;
  font-weight: 600;
  font-size: 14px;
  background-color: #eef4f6a8;
  border-radius: 7px;
  border: 1px solid #dfe5ea;
  cursor: default;
  line-height: 20px;
  text-align: center;
}

.c17.default {
  color: #62778c;
}

.c18 {
  display: inline-block;
  vertical-align: middle;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 22px;
  margin-right: 16px;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c7 .c8:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06), 0 0 0 1px rgba(17,49,96,0.08);
}

.c5 .c6:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c5 .c26 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.node--merge-active .c5 {
  z-index: -1;
}

.c25 .c6:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c13 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

.c14 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c20 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.c20::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #6e849a;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #6e849a;
  border: 4px solid white;
}

.c22 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.c22::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #8da2b5;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #8da2b5;
  border: 4px solid white;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: box-shadow 0.15s ease,opacity 0.15s ease;
  transition: box-shadow 0.15s ease,opacity 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16),0 4px 8px 0 rgba(17,49,96,0.2);
}

.canvas--nodes-active .c0 {
  opacity: 0.7;
}

.canvas--nodes-active .c0:not(.node--merge-active):hover {
  opacity: 1;
}

.c0 .c26 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #62778c;
}

.c3 input:active {
  background: transparent;
}

.c4 > *:not(:last-of-type) {
  margin-bottom: 8px;
}

.c1 {
  position: relative;
}

.c15 .c16 {
  display: inline;
  padding: 0;
  border: none;
  background: none;
  color: #132144;
  line-height: inherit;
  font-size: inherit;
  font-weight: inherit;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          value="If Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          If Block
        </div>
      </div>
    </div>
    <section
      className="c4"
    >
      <div
        className="c5"
        onMouseDown={[Function]}
      >
        <div
          className="c6 c7"
        >
          <div
            className="c8 c9"
          >
            <div
              className="c10"
            >
              <span
                className="c11 c12"
                color="#f86683"
                size={16}
              >
                <svg
                  data-file-name="SvgIf"
                />
              </span>
            </div>
            <span
              className="c13"
            >
              <div
                className="c14"
              >
                <div
                  className="c15 expressionfy"
                >
                   
                  <span
                    className="brackets"
                  >
                    <span
                      className="c16 c17"
                    >
                      {timestamp}
                    </span>
                    <span>
                       
                    </span>
                    <span
                      className="less"
                    >
                      <span
                        className="c18 plus"
                      >
                        <span
                          className="c11 c19"
                          color="currentColor"
                          size={16}
                        >
                          <svg
                            data-file-name="SvgLess"
                          />
                        </span>
                      </span>
                    </span>
                    <span>
                       
                    </span>
                    <span
                      className="math value"
                    >
                      212
                    </span>
                  </span>
                </div>
              </div>
            </span>
            <div
              className="c20"
              onClick={[Function]}
              onMouseDown={[Function]}
            />
          </div>
          <div
            className="c8 c9"
          >
            <div
              className="c10"
            />
            <span
              className="c13"
            >
              <div
                className="c14"
              >
                <div
                  className="c15 expressionfy"
                >
                   
                  <span
                    className="math brackets"
                  >
                    <span
                      className="math value"
                    >
                      4
                    </span>
                     
                    <span
                      className="c18 plus"
                    >
                      <span
                        className="c11 c19"
                        color="currentColor"
                        size={16}
                      >
                        <svg
                          data-file-name="SvgDivide"
                        />
                      </span>
                    </span>
                     
                    <span
                      className="brackets"
                    >
                      <span
                        className="parenthesis"
                      >
                        ( 
                      </span>
                      <span
                        className="math value"
                      >
                        5
                      </span>
                      <span>
                         
                      </span>
                      <span
                        className="or"
                      >
                        <span
                          className="c18 plus"
                        >
                          <span>
                            OR
                          </span>
                        </span>
                      </span>
                      <span>
                         
                      </span>
                      <span
                        className="math brackets"
                      >
                        
                        <span
                          className="c16 c17"
                        >
                          {sessions}
                        </span>
                        .includes('en')
                      </span>
                      <span
                        className="parenthesis"
                      >
                         )
                      </span>
                    </span>
                  </span>
                </div>
              </div>
            </span>
            <div
              className="c20"
              onClick={[Function]}
              onMouseDown={[Function]}
            />
          </div>
          <div
            className="c8 c9"
          >
            <div
              className="c10"
            />
            <span
              className="c13"
            >
              <div
                className="c14"
              >
                <div
                  className="c15 expressionfy"
                >
                   
                  <span
                    className="brackets"
                  >
                    <span
                      className="c16 c17"
                    >
                      {timestamp}
                    </span>
                    <span>
                       
                    </span>
                    <span
                      className="less"
                    >
                      <span
                        className="c18 plus"
                      >
                        <span
                          className="c11 c19"
                          color="currentColor"
                          size={16}
                        >
                          <svg
                            data-file-name="SvgLess"
                          />
                        </span>
                      </span>
                    </span>
                    <span>
                       
                    </span>
                    <span
                      className="math value"
                    >
                      212
                    </span>
                  </span>
                </div>
              </div>
            </span>
            <div
              className="c20"
              onClick={[Function]}
              onMouseDown={[Function]}
            />
          </div>
        </div>
        <div
          className="c6 c7"
        >
          <div
            className="c8 c9"
          >
            <div
              className="c10"
            >
              <span
                className="c11 c21"
                color="#6e849a"
                size={16}
              >
                <svg
                  data-file-name="SvgElse"
                />
              </span>
            </div>
            <span
              className="c13"
            >
              <div
                className="c14"
              >
                Else
              </div>
            </span>
            <div
              className="c22"
              color="#8da2b5"
              onClick={[Function]}
              onMouseDown={[Function]}
            />
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/Steps/If Step Single 1`] = `
.c17 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: currentColor;
}

.c17 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c21 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #6e849a;
}

.c21 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c12 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #f86683;
}

.c12 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c23 .c11 {
  color: #fff;
}

.c24 .c11 {
  color: #6e849a;
}

.c19 {
  display: inline-block;
  padding: 0px 4px 1px 4px;
  color: #62778c;
  font-weight: 600;
  font-size: 14px;
  background-color: #eef4f6a8;
  border-radius: 7px;
  border: 1px solid #dfe5ea;
  cursor: default;
  line-height: 20px;
  text-align: center;
}

.c19.default {
  color: #62778c;
}

.c16 {
  display: inline-block;
  vertical-align: middle;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 22px;
  margin-right: 16px;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c7 .c8:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06), 0 0 0 1px rgba(17,49,96,0.08);
}

.c5 .c6:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c5 .c26 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.node--merge-active .c5 {
  z-index: -1;
}

.c25 .c6:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c13 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

.c14 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c20 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.c20::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #6e849a;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #6e849a;
  border: 4px solid white;
}

.c22 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.c22::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #8da2b5;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #8da2b5;
  border: 4px solid white;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: box-shadow 0.15s ease,opacity 0.15s ease;
  transition: box-shadow 0.15s ease,opacity 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16),0 4px 8px 0 rgba(17,49,96,0.2);
}

.canvas--nodes-active .c0 {
  opacity: 0.7;
}

.canvas--nodes-active .c0:not(.node--merge-active):hover {
  opacity: 1;
}

.c0 .c26 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #62778c;
}

.c3 input:active {
  background: transparent;
}

.c4 > *:not(:last-of-type) {
  margin-bottom: 8px;
}

.c1 {
  position: relative;
}

.c15 .c18 {
  display: inline;
  padding: 0;
  border: none;
  background: none;
  color: #132144;
  line-height: inherit;
  font-size: inherit;
  font-weight: inherit;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          value="If Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          If Block
        </div>
      </div>
    </div>
    <section
      className="c4"
    >
      <div
        className="c5"
        onMouseDown={[Function]}
      >
        <div
          className="c6 c7"
        >
          <div
            className="c8 c9"
          >
            <div
              className="c10"
            >
              <span
                className="c11 c12"
                color="#f86683"
                size={16}
              >
                <svg
                  data-file-name="SvgIf"
                />
              </span>
            </div>
            <span
              className="c13"
            >
              <div
                className="c14"
              >
                <div
                  className="c15 expressionfy"
                >
                   
                  <span
                    className="math brackets"
                  >
                    <span
                      className="math value"
                    >
                      4
                    </span>
                     
                    <span
                      className="c16 plus"
                    >
                      <span
                        className="c11 c17"
                        color="currentColor"
                        size={16}
                      >
                        <svg
                          data-file-name="SvgDivide"
                        />
                      </span>
                    </span>
                     
                    <span
                      className="brackets"
                    >
                      <span
                        className="parenthesis"
                      >
                        ( 
                      </span>
                      <span
                        className="math value"
                      >
                        5
                      </span>
                      <span>
                         
                      </span>
                      <span
                        className="or"
                      >
                        <span
                          className="c16 plus"
                        >
                          <span>
                            OR
                          </span>
                        </span>
                      </span>
                      <span>
                         
                      </span>
                      <span
                        className="math brackets"
                      >
                        
                        <span
                          className="c18 c19"
                        >
                          {sessions}
                        </span>
                        .includes('en')
                      </span>
                      <span
                        className="parenthesis"
                      >
                         )
                      </span>
                    </span>
                  </span>
                </div>
              </div>
            </span>
            <div
              className="c20"
              onClick={[Function]}
              onMouseDown={[Function]}
            />
          </div>
        </div>
        <div
          className="c6 c7"
        >
          <div
            className="c8 c9"
          >
            <div
              className="c10"
            >
              <span
                className="c11 c21"
                color="#6e849a"
                size={16}
              >
                <svg
                  data-file-name="SvgElse"
                />
              </span>
            </div>
            <span
              className="c13"
            >
              <div
                className="c14"
              >
                Else
              </div>
            </span>
            <div
              className="c22"
              color="#8da2b5"
              onClick={[Function]}
              onMouseDown={[Function]}
            />
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;
